[package]
name = "rusty-jupyter-kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zeromq = {version="0.3",default-features = false, features = ["tokio-runtime", "tcp-transport"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
serde = { version = "1.0.193", features = ["derive"] }
chrono = "0.4.31"
