[package]
name = "nikkerish"
version = "0.1.0"
edition = "2021"
description = "A Jupyter Kernel implemented directly in Rust, experimentally wrapping the Uiua Language"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zeromq = {version="0.3",default-features = false, features = ["tokio-runtime", "tcp-transport"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
serde = { version = "1.0.193", features = ["derive"] }
chrono = "0.4.31"
anyhow = "1.0.78"
tokio = "1.35.1"
sha2 = "0.10.8"
hmac = "0.12.1"
bytes = "1.5.0"
hex = "0.4.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
uiua = {version = "0.7.1"}